--- a/styles/main.css
+++ b/styles/main.css
@@ -5,11 +5,12 @@ body {
 .grid-wrapper {
   display: flex;
   flex-wrap: wrap;
-  width: 300px;
+  width: 900px;
+  height: 900px;
 }
 
 .cell {
-  width: 30px;
-  height: 30px;
+  width: 10%;
+  height: 10%;
   border: 2px solid #000000;
 }
