--- a/styles/main.css
+++ b/styles/main.css
@@ -5,12 +5,13 @@ body {
 .grid-wrapper {
   display: flex;
   flex-wrap: wrap;
-  width: 900px;
-  height: 900px;
+  width: 500px;
+  height: 500px;
 }
 
 .cell {
   width: 10%;
   height: 10%;
   border: 2px solid #000000;
+  margin: 0;
 }
