--- a/styles/main.css
+++ b/styles/main.css
@@ -1,17 +1,19 @@
 body {
+  display: flex;
+  flex-direction: row;
   background-color: #808080;
 }
 
 .grid-wrapper {
   display: flex;
   flex-wrap: wrap;
-  width: 500px;
-  height: 500px;
+  width: 400px;
+  height: 400px;
 }
 
 .cell {
-  width: 10%;
-  height: 10%;
+  width: 8%;
+  height: 8%;
   border: 1px solid #000000;
   margin: 0;
 }
