--- a/styles/main.css
+++ b/styles/main.css
@@ -15,6 +15,7 @@ body {
 main {
   display: flex;
   flex-direction: row;
+  height: 600px;
   background-color: #808080;
 }
 
@@ -60,12 +61,15 @@ p {
   justify-content: space-between;
 }
 aside {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 330px;
   background-color: #000000;
   letter-spacing: 2px;
   line-height: 24px;
 }
 button {
-  align-self: center;
   height: 50px;
   width: 300px;
   font-family: 'Roboto Slab', serif;
@@ -75,6 +79,8 @@ button {
   background-color: #800000;
   letter-spacing: 5px;
 }
-button:hover {
+.button:hover {
   cursor: pointer;
+  color: #800000;
+  background-color: #ffd700;
 }
