--- a/styles/main.css
+++ b/styles/main.css
@@ -36,9 +36,11 @@ main {
 
 .tetrimino {
   background-color: #ffd700;
+  box-shadow: inset 3px 3px 3px #e7e5e5, inset -3px -3px 3px #141414;
 }
 .stopped {
   background-color: #463848;
+  box-shadow: inset 3px 3px 3px #e7e5e5, inset -3px -3px 3px #141414;
 }
 span {
   align-self: flex-end;
