reposition items in aside

--- a/styles/main.css
+++ b/styles/main.css
@@ -67,6 +67,7 @@ aside {
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: space-around;
   width: 330px;
   background-color: #000000;
   letter-spacing: 2px;
@@ -86,4 +87,14 @@ button {
   cursor: pointer;
   color: #800000;
   background-color: #ffd700;
+}
+.space {
+  background-color: #5a5363;
+  color: #ffffff;
+  text-transform: uppercase;
+  padding: 10px 10px 5px;
+  font-size: 12px;
+  letter-spacing: 2px;
+  border-radius: 3px;
+  box-shadow: inset 2px 5px 10px #e4e3e3, inset -3px -3px 2px #504f4f;
 }
