--- a/styles/main.css
+++ b/styles/main.css
@@ -99,3 +99,26 @@ button {
   border-radius: 3px;
   box-shadow: inset 2px 5px 10px #e4e3e3, inset -3px -3px 2px #504f4f;
 }
+.done {
+  display: none;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  text-align: center;
+  height: 75%;
+  width: 320px;
+  position: fixed;
+  z-index: 10;
+  opacity: 0.9;
+  background-color: #463848;
+}
+.loser {
+  font-family: 'Roboto Slab', serif;
+  text-transform: uppercase;
+  color: #ffd700;
+  font-size: 40px;
+  letter-spacing: 5px;
+}
+.done p {
+  margin: 0 auto;
+}
