--- a/styles/main.css
+++ b/styles/main.css
@@ -11,6 +11,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin: 0;
   background-color: #AAA3B4;
 }
 main {
@@ -136,4 +137,14 @@ button {
 }
 .hs-tag {
   font-size: 12px;
+}
+.grain {
+  background-image: url('/paper_1/paper_1.png');
+  opacity: 0.3;
+  position: fixed;
+  z-index: 5;
+  height: 110vh;
+  width: 110vw;
+  margin: 0;
+  padding: 0;
 }
