--- a/styles/main.css
+++ b/styles/main.css
@@ -140,11 +140,19 @@ button {
 }
 .grain {
   background-image: url('/paper_1/paper_1.png');
-  opacity: 0.3;
+  opacity: 0.2;
   position: fixed;
   z-index: 5;
   height: 110vh;
   width: 110vw;
   margin: 0;
   padding: 0;
+}
+.overlay {
+  background-image: url('https://image.freepik.com/free-vector/grainy-overlay-texture_1102-1186.jpg');
+  opacity: 0.2;
+  position: fixed;
+  z-index: 4;
+  height: 300vh;
+  width: 300vw;
 }
